--- a/angular-front-end/src/app/produits/produits.component.html
+++ b/angular-front-end/src/app/produits/produits.component.html
@@ -11,7 +11,7 @@
         <tbody>
         <tr *ngFor="let p of produits">
           <td>{{ p.idP }}</td><td>{{ p.nom }}</td><td>{{ p.marque }}</td>
-          <td>{{ p.desc }}</td><td>{{ p.quantite }}</td>
+          <td>{{ p.desc }}</td><td>{{ p.prix }}</td><td>{{ p.quantite }}</td>
         </tr>
         </tbody>
       </table>
